--- a/CalDepGUIFuentes/package.json
+++ b/CalDepGUIFuentes/package.json
@@ -16,6 +16,8 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.6",
+    "minizinc": "^4.0.1",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
