--- a/CalDepGUIFuentes/package.json
+++ b/CalDepGUIFuentes/package.json
@@ -17,8 +17,10 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.6",
+    "child_process": "^1.0.2",
     "minizinc": "^4.0.1",
     "next": "13.3.1",
+    "path": "^0.12.7",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
